<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Skatenight</string>
    <string name="title_activity_showinformation">Downloading...</string>
    <string name="title_activity_show_route">Route</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading…</string>
    <string name="user">User</string>
    <string name="admin">Administrator</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="show_info_header_date">Time and date</string>
    <string name="show_info_header_location">Location</string>
    <string name="show_info_header_fee">Participation fee</string>
    <string name="show_info_header_description">Description</string>
    <string name="show_info_button_map">Map</string>
    <string name="show_info_button_attend">Attend</string>
    <string name="show_info_button_leave">Leave</string>
    <string name="show_info_toast_attending">Great Success Of Glorious Registration Task.</string>
    <string name="show_info_toast_leaving">Great Betrayal Of Skatenight Event Attendance.</string>
    <string name="downloading">Downloading...</string>
    <string name="title_activity_show_events">Events</string>
    <string name="action_refresh_events">Refresh</string>
    <string-array name="selections_menu">
        <item name="delete">Delete</item>
    </string-array>
    <string name="title_activity_active_event">Local analysis</string>
    <string name="active_event_header_current_distance">Current distance</string>
    <string name="active_event_header_total_distance">Route length</string>
    <string name="active_event_header_cur_speed">Current speed</string>
    <string name="active_event_header_max_speed">Maximum speed</string>
    <string name="active_event_header_avg_speed">Average speed</string>
    <string name="active_event_header_current_altitude">Current altitude</string>
    <string name="active_event_header_elevation_gain">Elevation gain</string>
    <string name="active_event_button_speed_profile">Speed profile</string>
    <string name="active_event_button_map">Map</string>
    <string name="active_event_button_end">End analysis</string>
    <string name="active_event_no_email_message">Please register for an event first.</string>
    <string name="active_event_timer_format"><xliff:g id="sign">%1$s</xliff:g><xliff:g id="hours">%2$02d</xliff:g>:<xliff:g id="minutes">%3$02d</xliff:g>:<xliff:g id="seconds">%4$02d</xliff:g></string>
    <string name="active_event_altitude_format_meters"><xliff:g id="altitude">%1$.1f</xliff:g> m</string>
    <string name="active_event_distance_format_meters"><xliff:g id="distance">%1$.1f</xliff:g> m</string>
    <string name="active_event_speed_format"><xliff:g id="speed">%1$.1f</xliff:g> kph</string>
    <string name="send_broadcast">Send Broadcast</string>
    <string name="title_activity_settings">Settings</string>
    <string name="group">"Group: "</string>
    <string name="location_transmitter_button_stop">Stop</string>
    <string name="title_activity_blobstore_test">ImageStorageTestActivity</string>
    <string name="title_activity_register">Registration</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="register">Register</string>
    <string name="profile_picture">Profile Picture</string>
    <string-array name="image_selection">
        <item>Choose out of album</item>
        <item>Take a picture</item>
    </string-array>
    <string name="first_name_too_short">First name must be at least 3 characters long</string>
    <string name="email_not_chosed">E-mail address has not been selected</string>
    <string name="group_tab">Groups</string>
    <string name="info_tab">General</string>
    <string name="events_tab">Events</string>
    <string name="residence">Residence</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="description">Description</string>
    <string name="gender_female">Female</string>
    <string name="gender_male">Male</string>
    <string name="na">N/A</string>
    <plurals name="result_date_of_birth">
        <item quantity="one">%1$d.%2$d.%3$d (%4$d year)</item>
        <item quantity="other">%1$d.%2$d.%3$d (%4$d years)</item>
    </plurals>
    <string name="at_time">at</string>
    <string name="members">Members</string>
    <string name="title_activity_edit_profile">Edit</string>
    <string-array name="visibility_items_array">
        <item>Public</item>
        <item>Friends</item>
        <item>Only Me</item>
    </string-array>
    <string-array name="visibility_items_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="gender_items_array">
        <item>Unspecified</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="gender_items_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_message">Message</string>
    <string name="action_add_friend">Add as friend</string>
    <string name="profile_edit_save">"Save   "</string>
    <string name="Name">name</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="general_info">General Info</string>
    <string name="city">city</string>
    <string name="postal_code">postal code</string>
    <string name="settings">Settings</string>
    <string name="opt_out_of_search">Opt out of search</string>
    <string name="show_private_groups">Show private groups</string>
    <string name="date_of_birth_profile">date of birth</string>
    <string name="description_profile">description</string>
    <string-array name="image_selection_edit">
        <item>Choose out of album</item>
        <item>Take a picture</item>
        <item>Delete profile picture</item>
    </string-array>
    <string name="title_activity_search">Search</string>
    <string name="search_title">Search</string>
    <string name="search_hint">e-mail or name</string>
    <string name="from_city">from</string>
    <string name="no_user_found">No matching user found</string>
    <plurals name="years_old">
        <item quantity="one">%1$d year old</item>
        <item quantity="other">%1$d years old</item>
    </plurals>
    <string name="title_activity_friend">Friends</string>
    <string name="sure_delete_friend_dialog">Are you sure you want to delete this friend?</string>
    <string name="friend_delete_succeeded">Friend has been successfully removed</string>
    <string name="friend_does_not_exist">Freund existiert nicht mehr</string>
    <plurals name="friends_selected">
        <item quantity="one">%1$d friend selected</item>
        <item quantity="other">%1$d friends selected</item>
    </plurals>
    <string name="action_refresh_friends">Refresh</string>
    <string name="friends_hint">Through the profiles of users you can add new friends</string>
    <string name="title_activity_messaging">Messaging</string>
    <string name="create_new_conversation_dialog">There is no conversation with this user. Would you like to create a new conversation?</string>
    <string-array name="conversation_menu_array">
        <item>View Profile</item>
        <item>Update Profile Data</item>
        <item>Delete Conversation</item>
    </string-array>
    <string name="sure_delete_conversation_dialog">Are you sure you want to delete this conversation?</string>
    <string name="conversation_deleted">Conversation deleted</string>
    <string name="error_delete">Error while deleting</string>
    <string name="error_update">Update Error</string>
    <string name="profile_updated">Updated Profile Data</string>
    <string name="yesterday">Yesterday</string>
    <string name="messaging_hint">Through the profiles of users you can create new conversations</string>
    <string name="search_for_users">Search for users</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="input_required">Input required</string>
    <string name="input_message">Enter your message</string>
    <string name="message_could_not_be_sent">User does not have a registered device</string>
    <string name="sure_delete_message_dialog">Are you sure you want to delete the selected message?</string>
    <string name="message_deleted">Message deleted</string>
    <string name="unknown_user">Unknown User</string>
    <string name="event_adapter_fetch_error">No additional events could be fetched</string>
    <string name="meeting_place_label">Meeting place:</string>
    <string name="fee_label">Fee:</string>
    <string name="event_loading_error">Error loading event</string>
    <string name="show_route">Show route…</string>
    <string name="join_event">Participate</string>
    <string name="leave_event">Leave</string>
    <string name="error_leaving_event">An error occurred while leaving the event. Please try again.</string>
    <string name="error_joining_event">An error occurred while joining the event. Please try again.</string>
    <string name="choose_participation_visibility">Choose participation visibility…</string>
    <string-array name="event_participation_visibilities">
        <item>Private (only visible for hosts and admins)</item>
        <item>Friends (also visible for friends)</item>
        <item>Public (visible for all users)</item>
    </string-array>
    <string name="error_participation_needed">You have to participate in this event to change settings for it.</string>
    <string name="error_changing_visibility">An error occurred while changing the visibility. Please try again.</string>
    <string name="participants">Participants</string>
    <string name="galleries">Galleries</string>
    <string name="show_active_event">Event is currently taking place!\nGo to analysis…</string>
    <string name="show_passed_event">Event finished!\nGo to analysis…</string>
    <string name="cancel">Cancel</string>
    <string name="title_hint">Please enter a title…</string>
    <string name="description_hint">Please enter a description…</string>
    <string name="visibility_label">Visibility</string>
    <string name="change_visibility_hint">If you lower the visibility of the picture it will be removed out of all galleries that require a higher visibility setting.</string>
    <string name="createUserGroup">Create Group</string>
    <string name="distributeRights">Distribute Rights</string>
    <string name="inviteGroup">Invite User</string>
    <string name="changePrivacy">Change Privacy</string>
    <string name="changePicture">Change Picture</string>
    <string name="postGlobalMessage">Global Message</string>
    <string name="removeMember">Remove Members</string>
    <string name="changePasswod">Change Password</string>
    <string name="editBlackBoard">Edit Blackboard</string>
    <string name="sendButton">Send</string>
    <string name="distributeRightsHeader">Rights to Distribute</string>
    <string name="distributeRightsHeaderList">Distribute to</string>
    <string name="postMessageTitle">Post a Blackboard Message</string>
    <string name="post_black_board_info_string">Post a Picture aswell?</string>
    <string name="groupPasswordRetype">Repeat Password</string>
    <string name="checkPasswordNegative">Password don\'t match</string>
    <string name="submitGroup">Create</string>
    <string name="abortGroup">Cancel</string>
    <string name="change_password_old">Old Password</string>
    <string name="change_password_new">New Password</string>
    <string name="postMessage">Message</string>
    <string name="title">Title:</string>
    <string name="message">Message:</string>
    <string name="role">Role:</string>
</resources>