<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ws1415.ps1415.activity.ProfileActivity">
    <item
        android:id="@+id/action_message_profile"
        android:icon="@drawable/ic_action_chat"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:enabled="false"
        android:title="@string/action_message" />
    <item
        android:id="@+id/action_add_friend"
        android:icon="@drawable/ic_action_add_person"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:enabled="false"
        android:title="@string/action_add_friend" />
    <item
        android:id="@+id/action_edit_profile"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:enabled="false"
        android:title="@string/action_edit" />
</menu>
