<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="ws1415.ps1415.activity.DistributeRightsActivity">

    <TextView
        android:id="@+id/distribute_rights_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distributeRightsHeader"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/distribute_rights_right_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distribute_rights_header"
        android:padding="8dp"
        android:text="@string/distributeRights" />

    <com.gc.materialdesign.views.Switch
        android:id="@+id/switch_distribute_rights"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/distribute_rights_right_text_view"
        android:layout_alignParentRight="true"
        android:background="#1E88E5"
        materialdesign:check="false" />

    <TextView
        android:id="@+id/change_group_picture_right_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distribute_rights_right_text_view"
        android:padding="8dp"
        android:text="@string/changePicture" />

    <com.gc.materialdesign.views.Switch
        android:id="@+id/switch_change_group_picture"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/change_group_picture_right_text_view"
        android:layout_alignParentRight="true"
        android:background="#1E88E5"
        materialdesign:check="false" />

    <TextView
        android:id="@+id/global_message_right_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/change_group_picture_right_text_view"
        android:padding="8dp"
        android:text="@string/postGlobalMessage" />
    />

    <com.gc.materialdesign.views.Switch
        android:id="@+id/switch_global_message"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/global_message_right_text_view"
        android:layout_alignParentRight="true"
        android:background="#1E88E5"
        materialdesign:check="false" />

    <TextView
        android:id="@+id/invite_group_right_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/global_message_right_text_view"
        android:padding="8dp"
        android:text="@string/inviteGroup" />
    />

    <com.gc.materialdesign.views.Switch
        android:id="@+id/switch_invite_group"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/invite_group_right_text_view"
        android:layout_alignParentRight="true"
        android:background="#1E88E5"
        materialdesign:check="false" />

    <TextView
        android:id="@+id/delete_member_right_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/invite_group_right_text_view"
        android:padding="8dp"
        android:text="@string/removeMember" />
    />

    <com.gc.materialdesign.views.Switch
        android:id="@+id/switch_delete_member"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/delete_member_right_text_view"
        android:layout_alignParentRight="true"
        android:background="#1E88E5"
        materialdesign:check="false" />

    <TextView
        android:id="@+id/edit_black_board_right_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_member_right_text_view"
        android:padding="8dp"
        android:text="@string/editBlackBoard" />
    />

    <com.gc.materialdesign.views.Switch
        android:id="@+id/switch_edit_black_board"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/edit_black_board_right_text_view"
        android:layout_alignParentRight="true"
        android:background="#1E88E5"
        materialdesign:check="false" />

    <TextView
        android:id="@+id/distribute_rights_list_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_edit_black_board"
        android:layout_marginTop="16dp"
        android:text="@string/distributeRightsHeaderList"
        android:textSize="20sp" />


    <ListView
        android:id="@+id/distribute_rights_list_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/distribute_rights_button_abort"
        android:layout_below="@+id/distribute_rights_list_header">
    </ListView>

    <com.gc.materialdesign.views.ButtonFlat
        android:id="@+id/distribute_rights_button_abort"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/distribute_rights_button_submit"
        android:background="#1E88E5"
        android:paddingRight="8dp"
        android:text="@string/abortGroup" />

    <com.gc.materialdesign.views.ButtonFlat
        android:id="@+id/distribute_rights_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="#1E88E5"
        android:text="@string/submitGroup" />


</RelativeLayout>
