<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ws1415.ps1415.activity.EditPictureActivity">

    <ProgressBar
        android:id="@+id/pictureUploading"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="180dp"
        android:scaleType="center"
        android:src="@drawable/template_picture"
        android:layout_below="@id/pictureUploading"
        android:onClick="onChoosePictureClick" />

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/picture"
        android:paddingTop="16dp"
        android:hint="@string/title_hint"
        style="@style/primaryText" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:hint="@string/description_hint"
        style="@style/primaryText" />

    <TextView
        android:id="@+id/visibility_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:paddingTop="16dp"
        android:text="@string/visibility_label"
        style="@style/primaryText" />

    <Spinner
        android:id="@+id/visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@id/visibility_label"
        android:layout_below="@id/description" />

    <TextView
        android:id="@+id/visibilityHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/visibility"
        android:paddingTop="8dp"
        android:layout_alignParentRight="true"
        style="@style/secondaryText" />

    <TextView
        android:id="@+id/changeVisibilityHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/visibilityHint"
        android:paddingTop="8dp"
        android:layout_alignParentRight="true"
        android:text="@string/change_visibility_hint"
        android:visibility="gone"
        style="@style/secondaryText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/changeVisibilityHint"
        android:paddingTop="16dp" >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:onClick="onCancelClick" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:onClick="onSaveClick" />
    </LinearLayout>

</RelativeLayout>
