<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ws1415.ps1415.activity.PostBlackBoardActivity">

    <TextView
        android:id="@+id/post_black_board_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/postMessageTitle"/>

    <ImageView
        android:layout_below="@+id/post_black_board_header"
        android:id="@+id/black_board_image_view"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@color/list_background_pressed"
        android:src="@drawable/ic_action_picture"/>

    <TextView
        android:id="@+id/post_black_board_image_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/black_board_image_view"
        android:layout_alignLeft="@+id/black_board_image_view"
        android:text="@string/post_black_board_info_string"
        android:layout_marginBottom="16dp"/>


    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:id="@+id/floating_edit_text"
        android:layout_below="@+id/post_black_board_image_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="16dp">

        <EditText
            android:id="@+id/post_black_board_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postMessage"
            android:singleLine="true"
            android:maxLength="100"
            android:textSize="16dp" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <TextView
        android:id="@+id/failure_text_view"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_below="@+id/floating_edit_text"
        android:paddingLeft="16dp"
        android:textColor="@color/check_group_name_negative"
        android:textSize="12sp"/>

    <RelativeLayout
        android:layout_below="@+id/failure_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/post_black_board_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_toLeftOf="@+id/create_user_group_button_submit"
            android:background="#1E88E5"
            android:paddingRight="8dp"
            android:text="@string/abortGroup" />

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/post_black_board_send_button"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:background="#1E88E5"
            android:text="@string/sendButton" />
    </RelativeLayout>

</RelativeLayout>
