<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/create_user_group_password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <EditText
                android:id="@+id/change_group_password_current_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_password_old"
                android:maxLength="50"
                android:singleLine="true"
                android:textSize="16dp"
                android:inputType="textPassword"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>


        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <EditText
                android:id="@+id/change_group_password_new_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_password_new"
                android:maxLength="50"
                android:singleLine="true"
                android:textSize="16dp"
                android:inputType="textPassword"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <EditText
                android:id="@+id/change_group_password_new_pw_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/groupPasswordRetype"
                android:maxLength="50"
                android:singleLine="true"
                android:textSize="16dp"
                android:inputType="textPassword"/>
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <TextView
            android:id="@+id/change_group_password_info"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:paddingLeft="16dp"
            android:text="@string/checkPasswordNegative"
            android:textColor="@color/check_group_name_negative"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>