<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center_vertical" />

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/title"
            style="@style/primaryText"
            android:text="@string/title" />

        <TextView
            android:id="@+id/messageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/message"
            style="@style/primaryText"
            android:text="@string/message" />

        <TextView
            android:id="@+id/roleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/roleSpinner"
            style="@style/primaryText"
            android:text="@string/role" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLines="1"
            style="@style/primaryText"
            android:layout_toRightOf="@id/messageLabel" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:layout_below="@id/title"
            style="@style/primaryText"
            android:layout_toRightOf="@id/messageLabel" />

        <Spinner
            android:id="@id/roleSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/messageLabel"
            android:layout_below="@id/message"/>

    </RelativeLayout>

</LinearLayout>